--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "install": "^0.13.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
     "npm": "^7.7.4",
