--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "@material-ui/icons": "^5.0.0-alpha.28",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/styles": "^4.10.0",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.0.0",
+    "@types/react": "^17.0.4",
+    "@types/react-dom": "^17.0.3",
+    "@types/styled-components": "^5.1.9",
     "axios": "^0.21.1",
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
@@ -47,10 +52,13 @@
     "react-feather": "^2.0.8",
     "react-helmet": "^6.1.0",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-query": "^3.13.12",
     "react-redux": "^7.2.3",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "^4.0.0",
+    "styled-components": "^5.2.3",
+    "typescript": "^4.2.4",
     "uuid": "^8.3.0",
     "yup": "^0.29.3"
   },
